Fix text wrapping on iphones 6+

--- a/src/components/pages/Home/ServicesButtons/ServicesButtons.scss
+++ b/src/components/pages/Home/ServicesButtons/ServicesButtons.scss
@@ -7,7 +7,7 @@
   justify-content: space-between;
   min-height: calc(100vh - #{$header-height + 2px});
   margin-bottom: $spacing-vertical-sm;
-  padding: $spacing-vertical-lg 5%;
+  padding: $spacing-vertical-lg 0;
 
   .ts-button {
     @include screen-only-xs {
@@ -16,13 +16,14 @@
 
     align-items: center;
     display: flex;
-    font-size: 1.2rem;
+    font-size: 1rem;
+    padding-left: 0;
+    padding-right: 0;
 
     .icon {
+      @include size($icon-size-lg);
       display: inline;
-      height: $icon-size-md;
       margin-right: $spacing-horizontal-xs;
-      width: $icon-size-md;
     }
   }
 }
